fix: add continue-on-error

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -166,6 +166,7 @@ jobs:
     name: Linux
     runs-on: ubuntu-24.04
     strategy:
+　　　continue-on-error: true
       matrix:
         format: [deb, appimage, rpm]
     steps:
