--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -31,7 +31,7 @@ watch_path = ["src", "assets"]
 version = "0.1.0"
 identifier = "com.dreamlauncher.app"
 publisher = "Frogdream Studios"
-icon = ["assets/icons/app_icon.ico"]
+icon = ["assets/icons/app_icon.iconset/icon_256x256.png"]
 resources = ["assets", "python"]
 short_description = "A powerful and lightweight Minecraft launcher"
 long_description = "A powerful and lightweight Minecraft launcher that will be perfect for every player"
