fix: fix appimage build

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -212,6 +212,8 @@ jobs:
         run: rustup update stable
 
       - name: Build ${{ matrix.format }}
+        env:
+          NO_STRIP: true
         run: |
           dx bundle --release --platform desktop --package-types ${{ matrix.format }}
 
