--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -262,7 +262,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: macos-app
-          path: target/dx/DreamLauncher/bundle/macos/*.app
+          path: |
+            target/dx/DreamLauncher/bundle/macos/*.app
+            target/dx/DreamLauncher/bundle/macos/DreamLauncher.app
 
   macos-dmg:
     name: macOS DMG
