--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,6 @@ jobs:
     strategy:
       matrix:
         format: [installer]
-    env:
-      CARGO_NET_RETRY: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -64,12 +62,7 @@ jobs:
 
       - name: Build
         run: |
-          dx bundle --release --platform desktop || {
-            echo "Bundle failed, building exe..."
-            cargo build --release
-            mkdir -p target/dx/DreamLauncher/bundle/windows
-            cp target/release/DreamLauncher.exe target/dx/DreamLauncher/bundle/windows/DreamLauncher-${{ matrix.format }}.exe
-          }
+          dx bundle --release --platform desktop
 
       - name: Upload
         uses: actions/upload-artifact@v4
@@ -80,8 +73,6 @@ jobs:
   windows-arm:
     name: Windows ARM
     runs-on: windows-2025
-    env:
-      CARGO_NET_RETRY: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -142,12 +133,7 @@ jobs:
 
       - name: Build
         run: |
-          dx bundle --release --platform desktop --target aarch64-pc-windows-msvc || {
-            echo "Bundle failed, building exe..."
-            cargo build --release --target aarch64-pc-windows-msvc
-            mkdir -p target/dx/DreamLauncher/bundle/windows
-            cp target/aarch64-pc-windows-msvc/release/DreamLauncher.exe target/dx/DreamLauncher/bundle/windows/DreamLauncher.exe
-          }
+          dx bundle --release --platform desktop --target aarch64-pc-windows-msvc
         shell: bash
 
       - name: Upload
@@ -187,8 +173,16 @@ jobs:
       - name: Install deps
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
-          packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool fuse libfuse2 desktop-file-utils appstream
+          packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool fuse libfuse2 desktop-file-utils appstream file
           version: 1
+
+      - name: Setup AppImage environment
+        if: matrix.format == 'appimage'
+        run: |
+          wget -O linuxdeploy-x86_64.AppImage https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          chmod +x linuxdeploy-x86_64.AppImage
+          mkdir -p ~/.cache/tauri
+          mv linuxdeploy-x86_64.AppImage ~/.cache/tauri/
 
       - name: Cache
         uses: actions/cache@v4
@@ -205,23 +199,12 @@ jobs:
       - name: Install Rust
         run: rustup update stable
 
-      - name: Prepare linuxdeploy AppImage
-        if: matrix.format == 'appimage'
-        run: |
-          APPIMAGE_PATH="$HOME/.cache/tauri/linuxdeploy-x86_64.AppImage"
-          if [ -f "$APPIMAGE_PATH" ]; then
-            echo "linuxdeploy-x86_64.AppImage found"
-            ls -l "$APPIMAGE_PATH"
-            file "$APPIMAGE_PATH"
-            chmod +x "$APPIMAGE_PATH"
-            "$APPIMAGE_PATH" --version || echo "AppImage failed to run"
-          else
-            echo "linuxdeploy-x86_64.AppImage not found"
-          fi
-
       - name: Build
         run: |
           export NO_STRIP=true
+          if [ "${{ matrix.format }}" = "appimage" ]; then
+            export APPIMAGE_EXTRACT_AND_RUN=1
+          fi
           dx bundle --release --platform desktop --package-types ${{ matrix.format }}
 
       - name: Upload
