--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -214,7 +214,7 @@ jobs:
           path: target/dx/DreamLauncher/bundle/linux/bundle/${{ matrix.format }}/*.${{ matrix.format }}
 
   macos-app:
-    name: macOS App
+    name: macOS
     runs-on: macos-15
     steps:
       - name: Checkout
@@ -250,78 +250,16 @@ jobs:
           dx bundle --release --platform desktop || {
             echo "Bundle failed, building executable..."
             cargo build --release
-            mkdir -p target/dx/DreamLauncher/bundle/macos
-            # Создаем фиктивную папку .app для совместимости
-            mkdir -p "target/dx/DreamLauncher/bundle/macos/DreamLauncher.app/Contents/MacOS"
-            cp target/release/DreamLauncher "target/dx/DreamLauncher/bundle/macos/DreamLauncher.app/Contents/MacOS/DreamLauncher"
+            mkdir -p target/dx/DreamLauncher/bundle/macos/bundle/macos/DreamLauncher.app/Contents/MacOS
+            cp target/release/DreamLauncher target/dx/DreamLauncher/bundle/macos/bundle/macos/DreamLauncher.app/Contents/MacOS/DreamLauncher
           }
-      - name: Upload
+      - name: Upload app
         uses: actions/upload-artifact@v4
         with:
           name: macos-app
-          path: |
-            target/dx/DreamLauncher/bundle/macos/*.app
-            target/dx/DreamLauncher/bundle/macos/DreamLauncher.app
-
-  macos-dmg:
-    name: macOS DMG
-    runs-on: macos-15
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.13"
-
-      - name: Install Python deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r python/requirements.txt
-
-      - name: Cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/dx
-            ~/.cargo/bin/cargo-binstall
-          key: macos-dmg-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: macos-dmg-
-
-      - name: Install cargo-binstall
-        run: |
-          if [ ! -f ~/.cargo/bin/cargo-binstall ]; then
-            curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
-          fi
-
-      - name: Install dx
-        run: |
-          if [ ! -f ~/.cargo/bin/dx ]; then
-            cargo binstall dioxus-cli --version 0.7.0-rc.0 -y || cargo install dioxus-cli --version 0.7.0-rc.0
-          fi
-
-      - name: Build .app
-        run: |
-          dx bundle --release --platform desktop || {
-            echo "Bundle failed, building executable..."
-            cargo build --release
-            mkdir -p target/dx/DreamLauncher/bundle/macos/DreamLauncher.app/Contents/MacOS
-            cp target/release/DreamLauncher target/dx/DreamLauncher/bundle/macos/DreamLauncher.app/Contents/MacOS/DreamLauncher
-          }
-
-      - name: Install create-dmg
-        run: brew install create-dmg
-
-      - name: Create DMG
-        run: |
-          chmod +x scripts/macos/dmg.sh
-          scripts/macos/dmg.sh
-          mkdir -p target/dx/DreamLauncher/bundle/
-          mv "Dream Launcher.dmg" target/dx/DreamLauncher/bundle/DreamLauncher.dmg
-
-      - name: Upload DMG
+          path: target/dx/DreamLauncher/bundle/macos/bundle/macos/*.app
+      - name: Upload dmg
         uses: actions/upload-artifact@v4
         with:
           name: macos-dmg
-          path: target/dx/DreamLauncher/bundle/DreamLauncher.dmg
+          path: target/dx/DreamLauncher/bundle/macos/bundle/dmg/*.dmg
