fix: remove AppImage support

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -148,7 +148,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        format: [deb, appimage, rpm]
+        format: [deb, rpm]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -176,24 +176,6 @@ jobs:
           packages: libgtk-3-dev libglib2.0-dev libsoup-3.0-dev libssl-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev pkg-config build-essential curl xdotool fuse libfuse2 desktop-file-utils appstream file
           version: 1
 
-      - name: Setup AppImage environment
-        if: matrix.format == 'appimage'
-        run: |
-          mkdir -p ~/.cache/tauri
-          wget -O ~/.cache/tauri/linuxdeploy-x86_64.AppImage https://github.com/linuxdeploy/linuxdeploy/releases/latest/download/linuxdeploy-x86_64.AppImage
-          chmod +x ~/.cache/tauri/linuxdeploy-x86_64.AppImage
-          
-          export APPIMAGE_EXTRACT_AND_RUN=1
-          
-          ~/.cache/tauri/linuxdeploy-x86_64.AppImage --appimage-version || echo "AppImage test failed, will extract and run"
-
-          if ! ~/.cache/tauri/linuxdeploy-x86_64.AppImage --appimage-version >/dev/null 2>&1; then
-            cd ~/.cache/tauri
-            ./linuxdeploy-x86_64.AppImage --appimage-extract >/dev/null 2>&1
-            mv squashfs-root linuxdeploy-extracted
-            chmod +x linuxdeploy-extracted/AppRun
-          fi
-
       - name: Cache
         uses: actions/cache@v4
         with:
@@ -212,14 +194,6 @@ jobs:
       - name: Build
         run: |
           export NO_STRIP=true
-          if [ "${{ matrix.format }}" = "appimage" ]; then
-            export APPIMAGE_EXTRACT_AND_RUN=1
-          
-            if [ -d ~/.cache/tauri/linuxdeploy-extracted ]; then
-              echo "Using extracted linuxdeploy"
-              export LINUXDEPLOY_PATH=~/.cache/tauri/linuxdeploy-extracted/AppRun
-            fi
-          fi
           dx bundle --verbose --trace --release --platform desktop --package-types ${{ matrix.format }}
 
       - name: Upload
