--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -83,11 +83,18 @@ jobs:
         shell: bash
 
       - name: Upload
+        if: matrix.format == 'x64'
         uses: actions/upload-artifact@v4
         with:
-          name: dreamlauncher-windows-${{ matrix.format }}
-          path: |
-            ${{ matrix.format == 'arm64' && 'target/aarch64-pc-windows-msvc/desktop-release/bundle/nsis/*' || 'target/x86_64-pc-windows-msvc/desktop-release/bundle/nsis/*' }}
+          name: dreamlauncher-windows-x64
+          path: target/dx/DreamLauncher/bundle/windows/x86_64-pc-windows-msvc/*.exe
+
+      - name: Upload
+        if: matrix.format == 'arm64'
+        uses: actions/upload-artifact@v4
+        with:
+          name: dreamlauncher-windows-arm64
+          path: target/dx/DreamLauncher/bundle/windows/aarch64-pc-windows-msvc/*.exe
 
   linux:
     name: Linux
